--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0"
   },
-
   "scripts": {
     "build": "webpack --progress --p --mode=production",
     "watch": "webpack --progress --watch --mode=development",
     "cucumber": "superstatic src -p 3000 2> /dev/null & cucumber-js; lsof -ti tcp:3000 | xargs kill"
-
-  }
+  },
+  "repository": "https://github.com/danmalmx/address_book.git"
 }
